--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
     <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
+
+
     <header>
         <nav>
             <a href="/home">Produtos</a>
             <a href="/contact">Contato</a>
         </nav>
     </header>
+
+
     <main></main>
-    <footer></footer>
+
+
+    <footer>
+        <p>Caso deseje uma quantidade alta de produtos, seja para revendas
+            ou festas,<br> entre em contato no nosso WhatsApp.</p>
+            <a class="link__whatsapp" href="wa.me/5511913322531" target="_blank">Contato: 11913322531</a>
+    </footer>
 </body>
 </html>
