--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <footer>
         <p>Caso deseje uma quantidade alta de produtos, seja para revendas
             ou festas,<br> entre em contato no nosso WhatsApp.</p>
-            <a class="link__whatsapp" href="https://wa.me/5511913322531" target="_blank">Contato: 11913322531</a>
+            <a class="link__whatsapp" href="https://wa.me/5511913322531" target="_blank">Contato: 11 9 1332-2531</a>
     </footer>
 </body>
 </html>
