--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <header>
         <nav>
+            <a href="loginn.html"></a>
             <a href="/home">Produtos</a>
             <a href="/contact">Contato</a>
         </nav>
@@ -20,11 +21,12 @@
 
     <main></main>
 
-
     <footer>
-        <p>Caso deseje uma quantidade alta de produtos, seja para revendas
+        <p>Ca   so deseje uma quantidade alta de produtos, seja para revendas
             ou festas,<br> entre em contato no nosso WhatsApp.</p>
-            <a class="link__whatsapp" href="https://wa.me/5511913322531" target="_blank">Contato: 11 9 1332-2531</a>
+            <a class="link__whatsapp" href="https://wa.me/5511913322531" target="_blank">Contato: 11 91332-2531</a>
     </footer>
+
+    
 </body>
 </html>
