--- a/loginn.html
+++ b/loginn.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ngm meche aq</title>
     <link rel="stylesheet" href="assets/styles/ngm-meche.css">
-
 </head>
 <body>
     <form id="loginForm">
         <input id="usuario" type="text" placeholder="Usuario" required>
-        <input type="password" placeholder="Senha" required>
+        <input id="password" type="password" placeholder="Senha" required> <!-- Adicionei o id="password" aqui -->
         <button id="continue" type="submit">Continue</button>
     </form>
     <div id="erro_errado"></div>
