--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
     <header>
         <nav>
-            <a href="loginn.html"></a>
-            <a href="/home">Produtos</a>
-            <a href="/contact">Contato</a>
+            <a href="#home">Produtos</a>
+            <a href="#contact">Contato</a>
         </nav>
     </header>
 
@@ -25,7 +24,7 @@
     <main>
         <div class="container">
     
-            <div class="card">
+            <div id="home" class="card">
 
                 <div class="conteudoImg">
                     <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
