--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <a href="#home">Produtos</a>
-            <a href="#contact">Contato</a>
+            <a href="https://wa.me/5511913322531" target="_blank">Contato</a>
         </nav>
     </header>
 
