--- a/index.html
+++ b/index.html
@@ -72,6 +72,31 @@
                 <button class="comprar-card">Comprar</button>
             </div>
         </div>
+
+        <div class="container3">
+
+            <div class="card3">
+                <div class="conteudoImg">
+                    <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
+                </div>
+                <h1 class="tituto-card">Bolo De Morango</h1>
+                <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
+                <h2 class="preco-card">10,99R$</h2>
+                <button class="comprar-card">Comprar</button>
+                </div>
+
+                <div class="card3">
+                    <div class="conteudoImg">
+                        <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
+                    </div>
+                    <h1 class="tituto-card">Bolo De Morango</h1>
+                    <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
+                    <h2 class="preco-card">10,99R$</h2>
+                    <button class="comprar-card">Comprar</button>
+                </div>
+
+
+        </div>
         
     </main>
 
