--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h1 class="tituto-card">Bolo De Morango</h1>
                 <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
                 <h2 class="preco-card">10,99R$</h2>
-                <button class="comprar-card">Comprar</button>
+                <button id="comprarProduto" class="comprar-card">Comprar</button>
                 
             </div>
 
@@ -44,7 +44,7 @@
                 <h1 class="tituto-card">Bolo De Morango</h1>
                 <p class="ingredientes-card">Chocolate <br> Leite condensando <br> Leite Ninho</p>
                 <h2 class="preco-card">10,99R$</h2>
-                <button class="comprar-card">Comprar</button>
+                <button id="comprarProduto" class="comprar-card">Comprar</button>
                 
             </div>
         </div>
@@ -58,7 +58,7 @@
             <h1 class="tituto-card">Bolo De Morango</h1>
             <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
             <h2 class="preco-card">10,99R$</h2>
-            <button class="comprar-card">Comprar</button>
+            <button id="comprarProduto" class="comprar-card">Comprar</button>
             </div>
 
 
@@ -69,7 +69,7 @@
                 <h1 class="tituto-card">Bolo De Morango</h1>
                 <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
                 <h2 class="preco-card">10,99R$</h2>
-                <button class="comprar-card">Comprar</button>
+                <button id="comprarProduto" class="comprar-card">Comprar</button>
             </div>
         </div>
 
@@ -82,7 +82,7 @@
                 <h1 class="tituto-card">Bolo De Morango</h1>
                 <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
                 <h2 class="preco-card">10,99R$</h2>
-                <button class="comprar-card">Comprar</button>
+                <button id="comprarProduto" class="comprar-card">Comprar</button>
                 </div>
 
                 <div class="card3">
@@ -92,7 +92,7 @@
                     <h1 class="tituto-card">Bolo De Morango</h1>
                     <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
                     <h2 class="preco-card">10,99R$</h2>
-                    <button class="comprar-card">Comprar</button>
+                    <button id="comprarProduto" class="comprar-card">Comprar</button>
                 </div>
 
 
