--- a/loginn.html
+++ b/loginn.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="assets/styles/ngm-meche.css">
 </head>
 <body>
-    <form id="loginForm">
-        <input id="usuario" type="text" placeholder="Usuario" required>
-        <input id="password" type="password" placeholder="Senha" required> <!-- Adicionei o id="password" aqui -->
+    <form id="loginAdm">
+        <input id="nome" type="text" placeholder="Usuario" required>
+        <input id="senha" type="password" placeholder="Senha" required> <!-- Adicionei o id="password" aqui -->
         <button id="continue" type="submit">Continue</button>
     </form>
     <div id="erro_errado"></div>
