--- a/loginn.html
+++ b/loginn.html
@@ -9,7 +9,7 @@
 <body>
     <form id="loginAdm">
         <input id="nome" type="text" placeholder="Usuario" required>
-        <input id="senha" type="password" placeholder="Senha" required> <!-- Adicionei o id="password" aqui -->
+        <input id="senha" type="password" placeholder="Senha" required>
         <button id="continue" type="submit">Continue</button>
     </form>
     <div id="erro_errado"></div>
