--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bel's Doce</title>
 
+    <link rel="stylesheet" href="assets/styles/vars.css">
     <link rel="stylesheet" href="assets/styles/styles.css">
     <link rel="stylesheet" href="assets/styles/media-screnn.css">
     <link rel="stylesheet" href="assets/styles/cards.css">
