--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="assets/styles/media-screnn.css">
     <link rel="stylesheet" href="assets/styles/cards.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 
@@ -31,7 +36,9 @@
                     <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
                 </div>
                 <h1 class="tituto-card">Bolo De Morango</h1>
-                <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
+                <li class="ingredientes-card">Morango</li>
+                <li class="ingredientes-card">Leite condensando</li>
+                <li class="ingredientes-card">Chocolate</li>
                 <h2 class="preco-card">10,99R$</h2>
                 <button id="comprarProduto" class="comprar-card">Comprar</button>
                 
@@ -43,7 +50,9 @@
                     <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de chocolate">
                 </div>
                 <h1 class="tituto-card">Bolo De Morango</h1>
-                <p class="ingredientes-card">Chocolate <br> Leite condensando <br> Leite Ninho</p>
+                <li class="ingredientes-card">Morango</li>
+                <li class="ingredientes-card">Leite condensando</li>
+                <li class="ingredientes-card">Chocolate</li>
                 <h2 class="preco-card">10,99R$</h2>
                 <button id="comprarProduto" class="comprar-card">Comprar</button>
                 
@@ -57,7 +66,9 @@
                 <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
             </div>
             <h1 class="tituto-card">Bolo De Morango</h1>
-            <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
+            <li class="ingredientes-card">Morango</li>
+                <li class="ingredientes-card">Leite condensando</li>
+                <li class="ingredientes-card">Chocolate</li>
             <h2 class="preco-card">10,99R$</h2>
             <button id="comprarProduto" class="comprar-card">Comprar</button>
             </div>
@@ -68,7 +79,9 @@
                     <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
                 </div>
                 <h1 class="tituto-card">Bolo De Morango</h1>
-                <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
+                <li class="ingredientes-card">Morango</li>
+                <li class="ingredientes-card">Leite condensando</li>
+                <li class="ingredientes-card">Chocolate</li>
                 <h2 class="preco-card">10,99R$</h2>
                 <button id="comprarProduto" class="comprar-card">Comprar</button>
             </div>
@@ -81,7 +94,9 @@
                     <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
                 </div>
                 <h1 class="tituto-card">Bolo De Morango</h1>
-                <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
+                <li class="ingredientes-card">Morango</li>
+                <li class="ingredientes-card">Leite condensando</li>
+                <li class="ingredientes-card">Chocolate</li>
                 <h2 class="preco-card">10,99R$</h2>
                 <button id="comprarProduto" class="comprar-card">Comprar</button>
                 </div>
@@ -91,7 +106,9 @@
                         <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
                     </div>
                     <h1 class="tituto-card">Bolo De Morango</h1>
-                    <p class="ingredientes-card">Morango <br> Leite condensando <br>Chocolate</p>
+                    <li class="ingredientes-card">Morango</li>
+                    <li class="ingredientes-card">Leite condensando</li>
+                    <li class="ingredientes-card">Chocolate</li>
                     <h2 class="preco-card">10,99R$</h2>
                     <button id="comprarProduto" class="comprar-card">Comprar</button>
                 </div>
