--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="card">
 
                 <div class="conteudoImg">
-                    <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de chocolate">
+                    <img class="img-card" src="assets/img/teste.png" alt="Bolo de chocolate">
                 </div>
                 <h1 class="tituto-card">Bolo De Morango</h1>
                 <li class="ingredientes-card">Morango</li>
@@ -63,7 +63,7 @@
         <div class="container2">
             <div class="card2">
             <div class="conteudoImg">
-                <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
+                <img class="img-card" src="assets/img/teste.png" alt="Bolo de morango">
             </div>
             <h1 class="tituto-card">Bolo De Morango</h1>
             <li class="ingredientes-card">Morango</li>
@@ -76,7 +76,7 @@
 
             <div class="card2">
                 <div class="conteudoImg">
-                    <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
+                    <img class="img-card" src="assets/img/teste.png" alt="Bolo de morango">
                 </div>
                 <h1 class="tituto-card">Bolo De Morango</h1>
                 <li class="ingredientes-card">Morango</li>
@@ -91,7 +91,7 @@
 
             <div class="card3">
                 <div class="conteudoImg">
-                    <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
+                    <img class="img-card" src="assets/img/teste.png" alt="Bolo de morango">
                 </div>
                 <h1 class="tituto-card">Bolo De Morango</h1>
                 <li class="ingredientes-card">Morango</li>
@@ -103,7 +103,7 @@
 
                 <div class="card3">
                     <div class="conteudoImg">
-                        <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
+                        <img class="img-card" src="assets/img/teste.png" alt="Bolo de morango">
                     </div>
                     <h1 class="tituto-card">Bolo De Morango</h1>
                     <li class="ingredientes-card">Morango</li>
