img sem fundo 2.0

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="home" class="card">
 
                 <div class="conteudoImg">
-                    <img class="img-card" src="assets/img/teste.jpg" alt="Bolo de morango">
+                    <img class="img-card" src="assets/img/teste.png" alt="Bolo de morango">
                 </div>
                 <h1 class="tituto-card">Bolo De Morango</h1>
                 <li class="ingredientes-card">Morango</li>
