--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 
 
     <header>
-        <nav>
+        <nav class="bar">
             <a href="#home">Produtos</a>
             <a href="https://wa.me/5511913322531" target="_blank">Contato</a>
+            <a href="#cardapio">Cardapio</a>
         </nav>
     </header>
 
@@ -125,9 +126,14 @@
     </main>
 
     <footer>
-        <p>Caso deseje uma quantidade alta de produtos, seja para revendas
-            ou festas, entre em contato no nosso WhatsApp.</p>
-            <a class="link__whatsapp" href="https://wa.me/5511913322531" target="_blank">Contato: 11 91332-2531</a>
+        <div class="footer-bar">
+            <a class="link__instagram" href="https://www.instagram.com/belsdoceria?" target="_blank">
+                <img  src="assets/img/instagram.png" width="25px" height="25px" alt="Logo instagram">Instagram: @belsdoceria
+            </a>
+            <a class="link__whatsapp" href="https://wa.me/5511913322531" target="_blank">
+                <img src="assets/img/whatsapp.png" width="25px" width="25px" alt="Logo whatsapp">Whatsapp: 11 91332-2531
+            </a>
+        </div>
     </footer>
 
     
